Autenticacion de usuario

--- a/CerinfoNur/CerinfoNur.csproj
+++ b/CerinfoNur/CerinfoNur.csproj
@@ -735,6 +735,8 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Shared\Header.cshtml" />
     <Content Include="Views\Shared\_ViewStart.cshtml" />
+    <Content Include="Views\Login\Auth.cshtml" />
+    <Content Include="Views\Login\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
