--- a/CerinfoNur/Web.config
+++ b/CerinfoNur/Web.config
@@ -68,7 +68,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="cerinfoEntities" connectionString="metadata=res://*/Models.UsuarioModel.csdl|res://*/Models.UsuarioModel.ssdl|res://*/Models.UsuarioModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-RM8UAH3;initial catalog=cerinfo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="CerinfoNurContext" connectionString="Data Source=DESKTOP-RM8UAH3; Initial Catalog=CerinfoNurContext-20190413165810; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CerinfoNurContext-20190413165810.mdf" providerName="System.Data.SqlClient" />
+    <add name="CerinfoNurContext" connectionString="Data Source=DESKTOP-DPN7855; Initial Catalog=CerinfoNurContext-20190413165810; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CerinfoNurContext-20190413165810.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
